--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <% if !current_user.nil? %>
+    <ul>
+      <li>Logged in as: <%= current_user.username %></li>
+      <li><%= button_to "Logout", session_url, :method => :delete %></li>
+    </ul>
+  <% end %>
+  <hr>
+
 <%= yield %>
 
 </body>
