--- a/app/assets/templates/pins/card.jst.ejs
+++ b/app/assets/templates/pins/card.jst.ejs
@@ -1,5 +1,17 @@
 <article class='pin-card'>
-    <p><a href='#'>User <%= pin.escape('user_id') %></a> pinned a photo for <a href='#'>Blackbird</a> by <a href='#'>The Beatles</a></p>
-    <img src="http://www.examiner.com/images/blog/EXID19412/images/white_stripes_live(2).jpg" >
-        <p>This picture reminds me of my mother singing me Beatles songs when I went to sleep!</p>
+    <p>
+      <a href='#'>
+        <%= pin.get('user').username %>
+      </a>
+      pinned a photo for
+      <a href='#'>
+        <%= pin.get('song').title %>
+      </a>
+        by
+      <a href='#'>
+        <%= pin.get('band').name %>
+      </a>
+    </p>
+    <img src="<%= pin.escape('link') %>" >
+    <p><%= pin.escape('text') %></p>
 </article>
