work on grid layout, with CSS and a which_col method

--- a/app/assets/templates/pins/index.jst.ejs
+++ b/app/assets/templates/pins/index.jst.ejs
@@ -1,1 +1,6 @@
-<div class='feed_container'></div>
+<section class='feed_container'>
+  <div class='col col1'></div>
+  <div class='col col2'></div>
+  <div class='col col3'></div>
+  <div class='col col4'></div>
+</section>
