--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,21 @@
  *= require_tree .
  */
 
-.feed_container {
+body {
   background: #E1DFE1;
+}
+
+#topbar {
+  background: white;
+  width: 100%;
+  height: 28px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1),0 1px 0 0 rgba(0,0,0,0.1);
+  text-align: center;
+  padding: 10px 0;
+  margin-bottom: 20px;
+}
+
+.feed_container {
   font-family: "Helvetica Neue","Hiragino Kaku Gothic Pro",arial,sans-serif;
   width: 968px;
   margin: 0 auto;
@@ -31,6 +44,7 @@
 .pin-card {
   background: white;
   width: 228px;
+  margin-bottom: 12px;
   border: 1px solid #D8D7E0;
   border-radius: 4px;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,0.20);
