--- a/app/assets/templates/layout/topbar.jst.ejs
+++ b/app/assets/templates/layout/topbar.jst.ejs
@@ -1,1 +1,12 @@
 <p>Music Pins</p>
+
+<% if (CURRENT_USER_ID) { %>
+  Logged in as: <%= CURRENT_USER_USERNAME %>
+  <%= LOG_OUT_BUTTON %>
+
+<% } %>
+
+
+
+
+
