--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,9 +1,26 @@
-<div id='topbar'></div>
+<div id='topbar'>
+  <div id='topbar-wrap'>
+    <% if !current_user.nil? %>
+      <ul class='logged'>
+        <li>Logged in as: <%= current_user.username %></li>
+        <li><%= button_to "Logout", session_url, :method => :delete %></li>
+      </ul>
+    <% end %>
+
+    <p class='logo'>Music Pins</p>
+
+    <a class='add-pin' href='#'>Add a pin</a>
+  </div>
+</div>
 <div id='content'>
   Main content
 </div>
 
 <script>
+// CURRENT_USER_ID = <%= current_user.id %>
+// CURRENT_USER_USERNAME = <%= current_user.username %>
+// LOG_OUT_BUTTON = '<%= button_to "Logout", session_url, :method => :delete %>'
+
 $(document).ready(function(){
   MP.initialize();
 });
