preliminary CSS for login/signup

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,4 +107,23 @@ body {
   border: 0;
 }
 
+/*  LOG IN  */
 
+.login {
+  width: 300px;
+  height: 300px;
+  margin: 200px auto;
+  padding: 30px;
+  background: #fdfdfd;
+  border: 1px solid black;
+}
+
+.login h3 {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.login input {
+  margin: 10px auto;
+}
