--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Create User</h1>
+<div class='login'>
+  <h3>Create User</h3>
 
-<%= render "form", :user => @user %>
+  <%= render "form", :user => @user %>
+</div>
