creates newPin BB route, view, (empty) template

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,12 @@ body {
   background: #E1DFE1;
 }
 
+html {
+  overflow-y: scroll;
+  /*  ugly fix makes scroll bar always present
+      so topbar doesn't move right when adding new pin */
+}
+
 /*  TOP BAR  */
 
 #topbar  {
