--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -9,7 +9,7 @@
 
     <p class='logo'>Music Pins</p>
 
-    <a class='add-pin' href='#'>Add a pin</a>
+    <a class='add-pin' href='#/new'>Add a pin</a>
   </div>
 </div>
 
