adds second part of NewPinView form

--- a/app/assets/templates/pins/new1.jst.ejs
+++ b/app/assets/templates/pins/new1.jst.ejs
@@ -1,5 +1,6 @@
 <h3>Adding a new pin</h3>
 
+<form id='addPinForm'>
 <p>Choose the song you want to add a pin for:</p>
 <br>
 <p>Enter band mid:</p>
@@ -8,4 +9,6 @@
 <p>Enter song mid:</p>
 <input type='text' name='pin[:song_mid]'></input>
 <br><br>
-<button>Next</button>
+<button class='songSelected'>Next</button>
+
+</form>
