starts to implement createPin method, boostraps current_user_id

--- a/app/assets/templates/pins/new1.jst.ejs
+++ b/app/assets/templates/pins/new1.jst.ejs
@@ -4,10 +4,10 @@
 <p>Choose the song you want to add a pin for:</p>
 <br>
 <p>Enter band mid:</p>
-<input type='text' name='pin[:band_mid]'></input>
+<input type='text' name='pin[band_mid]'></input>
 <br><br>
 <p>Enter song mid:</p>
-<input type='text' name='pin[:song_mid]'></input>
+<input type='text' name='pin[song_mid]'></input>
 <br><br>
 <button class='songSelected'>Next</button>
 
