--- a/app/assets/templates/pins/new1.jst.ejs
+++ b/app/assets/templates/pins/new1.jst.ejs
@@ -5,9 +5,13 @@
 <br>
 <p>Enter band mid:</p>
 <input type='text' name='pin[band_mid]'></input>
+<p>Enter band name:</p>
+<input type='text' name='pin[band_name]'></input>
 <br><br>
 <p>Enter song mid:</p>
 <input type='text' name='pin[song_mid]'></input>
+<p>Enter song title:</p>
+<input type='text' name='pin[song_title]'></input>
 <br><br>
 <button class='songSelected'>Next</button>
 
