style adjustments to topbar

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -11,7 +11,7 @@
       </ul>
     <% end %>
 
-    <p class='logo'>Music Pins</p>
+    <a href='#' class='logo'>Music Pins</a>
 
     <a class='add-pin' href='#/new'>Add a pin</a>
   </div>
