--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@ body {
 
 html {
   overflow-y: scroll;
-  /*  ugly fix makes scroll bar always present
+  /*  ugly fix to always display right scroll bar in Chrome
       so topbar doesn't move right when adding new pin */
 }
 
@@ -68,6 +68,14 @@ h3 {
     font-size: 18px;
 }
 
+#topbar a, #topbar a:visited {
+  color:black;
+  text-decoration: none;
+}
+
+#topbar a:hover {
+  text-decoration: underline;
+}
 
 /*  FEED  */
 
