--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require jquery.ui.all
  *= require_self
  */
 
@@ -138,6 +139,14 @@ h3 {
   margin: 20px auto;
   padding: 30px;
   border-radius: 4px;
+}
+.songSelectView {
+  display: none;
+}
+
+select#song {
+  width: 300px;
+  -webkit-appearance: menulist-button;
 }
 
 
