--- a/app/assets/templates/pins/new_pin_save_pin.jst.ejs
+++ b/app/assets/templates/pins/new_pin_save_pin.jst.ejs
@@ -1,3 +1,4 @@
+<form id='createPin'>
 <br><br>
 <p>Paste the link of the picture you want to pin to this song.</p>
 <input type='text' name='pin[link]'></input>
@@ -5,4 +6,6 @@
 
 <textarea rows="4" cols="50" placeholder='Why does this picture remind you of this song?' name='pin[text]'></textarea>
 <br><br>
-<button class="pinSubmit">Save</button>
+<button class="test">Test</button>
+<button type="submit">Save</button>
+</form>
