--- a/app/assets/templates/pins/card.jst.ejs
+++ b/app/assets/templates/pins/card.jst.ejs
@@ -1,13 +1,13 @@
 <p>
-  <a href='#'>
+  <a href='#/user/<%= pin.get('user').id %>'>
     <%= pin.get('user').username %>
   </a>
   pinned a photo for
-  <a href='#'>
+  <a href='#/song/<%= pin.get('song').id %>'>
     <%= pin.get('song').title %>
   </a>
     by
-  <a href='#'>
+  <a href='#/band/<%= pin.get('band').id %>'>
     <%= pin.get('band').name %>
   </a>
 </p>
