--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
 
 body {
   background: #E1DFE1;
+  font-family: "Helvetica Neue","Hiragino Kaku Gothic Pro",arial,sans-serif;
 }
 
 html {
@@ -31,6 +32,11 @@ h3 {
   margin-bottom: 10px;
 }
 
+#content {
+  position:relative;
+  width: 100%;
+}
+
 
 /*  TOP BAR  */
 
@@ -40,8 +46,8 @@ h3 {
   height: 28px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1),0 1px 0 0 rgba(0,0,0,0.1);
   text-align: center;
-  padding: 10px 0;
-  margin-bottom: 20px;
+  padding: 10px 0 18px;
+  margin-bottom: 2px;
 }
 
 #topbar-wrap  {
@@ -84,8 +90,8 @@ h3 {
   font-family: "Helvetica Neue","Hiragino Kaku Gothic Pro",arial,sans-serif;
   width: 968px;
   margin: 0 auto;
-  height: 800px;
-  padding: 6px;
+  min-height: 800px;
+/*  padding: 6px;*/
 }
 
 .feed_container .col {
@@ -93,6 +99,7 @@ h3 {
   width: 230px;
   float: left;
   padding: 6px;
+  margin-top: 26px;
 }
 
 .pin-card {
@@ -130,6 +137,66 @@ h3 {
   width: 228px;
   border: 0;
 }
+
+/*  PIN FOCUS */
+
+.white_overlay {
+/*  display: none;*/
+	position: absolute;
+  top: 0px;
+	left: 0%;
+	width: 100%;
+	height: 110%;
+	background-color: white;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+}
+
+.focus_container {
+  padding: 20px;
+  position:absolute;
+  left: 50%;
+  margin-left: -380px;
+  top: 40px;
+	opacity:1;
+  background: white;
+  width: 720px;
+  border: 1px solid #D8D7E0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.20);
+
+  -webkit-font-smoothing: antialiased;
+  color: #333;
+  font-size: 16px;
+  line-height: 17px;
+  word-wrap: break-word;
+
+}
+
+.focus_container p {
+  margin: 0;
+  padding: 10px;
+}
+
+.focus_container a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: bold;
+}
+
+.focus_container a:hover {
+  text-decoration: underline;
+}
+
+.focus_container img {
+  max-width: 600px;
+  display: block;
+  margin: 20px auto;
+}
+
+
+
 
 /*  ADDING PIN  */
 
