adds comment username to CommentDetail view

--- a/app/assets/templates/comments/detail.jst.ejs
+++ b/app/assets/templates/comments/detail.jst.ejs
@@ -1,2 +1,2 @@
-<p class='comment_author'>Comment by <%= comment.get('user_id') %></p>
+<p class='comment_author'>Comment by <a href="#/user/<%= comment.get('user').id %>"><%= comment.get('user').username %></a></p>
 <p class='comment_body'><%= comment.escape('body') %></p>
