--- a/app/assets/templates/comments/new.jst.ejs
+++ b/app/assets/templates/comments/new.jst.ejs
@@ -1,3 +1,3 @@
 <p class='comment_author'>Add a comment!</p>
-<textarea rows="3" cols="50" name="comment[body]" id="comment_body"></textarea>
-<span class='ui-widget'><button id='post_comment'>Post</button></span>
+<textarea rows="3" cols="50" name="comment_body" class="comment_body"></textarea>
+<span class='ui-widget'><button class='post_comment'>Post</button></span>
