adds likes count to PinCard

--- a/app/assets/templates/pins/card.jst.ejs
+++ b/app/assets/templates/pins/card.jst.ejs
@@ -14,7 +14,7 @@
 <a class='focus_link' href='#/pin/<%= pin.get('id') %>'><img src="<%= pin.escape('link') %>" ></a>
 <p><%= pin.escape('text') %></p>
 <footer>
-  <div class='likes'>&hearts; 3</div>
+  <div class='likes'>&hearts; <%= pin.get('likes').length %></div>
   <div class='comments_count'>
     <a href='#/pin/<%= pin.get('id') %>'>
       <%= pin.get('comments').length %> comment<%= pin.get('comments').length > 1 ? 's' : '' %>
