--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -225,10 +225,23 @@ h3 {
 }
 
 .focus_container .likes {
+  display: block;
   position:absolute;
   top: 30px;
   right: 30px;
   font-size: 18px;
+}
+
+.focus_container .likes .unlike {
+  display: none;
+}
+
+.focus_container .likes.liked .unlike {
+  display: inline;
+}
+
+.focus_container .likes.liked .like {
+  display: none;
 }
 
 .comments {
