--- a/app/assets/templates/pins/card.jst.ejs
+++ b/app/assets/templates/pins/card.jst.ejs
@@ -1,12 +1,10 @@
 <p>
   <a href='#/user/<%= pin.get('user').id %>'>
-    <%= pin.get('user').username %>
-  </a>
-  pinned a photo for
+    <%= pin.get('user').username %></a>
+   pinned a photo for
   <a href='#/song/<%= pin.get('song').id %>'>
-    <%= pin.get('song').title %>
-  </a>
-    by
+    <%= pin.get('song').title %></a>
+     by
   <a href='#/band/<%= pin.get('band').id %>'>
     <%= pin.get('band').name %>
   </a>
