--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,6 +35,7 @@ h3 {
 #content {
   position:relative;
   width: 100%;
+  padding-top: 45px;
 }
 
 
@@ -48,6 +49,8 @@ h3 {
   text-align: center;
   padding: 10px 0 18px;
   margin-bottom: 2px;
+  position:fixed;
+  z-index: 1000;
 }
 
 #topbar-wrap  {
@@ -208,12 +211,11 @@ h3 {
 /*  PIN FOCUS */
 
 .white_overlay {
-/*  display: none;*/
-	position: absolute;
-  top: 0px;
-	left: 0%;
+  position: fixed;
+  top: 0;
+/*  left: 0%;*/
 	width: 100%;
-	height: 110%;
+	height: 100%;
 	background-color: white;
 	-moz-opacity: 0.8;
 	opacity:.80;
@@ -224,7 +226,8 @@ h3 {
 
 .focus_container {
   position:absolute;
-  top: 40px;
+/*  top: 40px;*/
+  top: 95px;
   left: 50%;
   margin-left: -380px;
   padding: 20px;
