--- a/app/assets/templates/layout/topbar.jst.ejs
+++ b/app/assets/templates/layout/topbar.jst.ejs
@@ -5,6 +5,8 @@
     <a href='/#/user/<%= window.current_user.id %>/likes'>Your likes</a>
     <a>Your songs</a>
     <a>Your bands</a>
+    <a href='/#/song/most_popular'>Most popular songs</a>
+    <a href='/#/band/most_popular'>Most popular bands</a>
     <a href='/#/all'>All pins</a>
     <form action="/session" class="button_to" method="post">
         <input name="_method" type="hidden" value="delete">
