--- a/app/assets/templates/pins/index.jst.ejs
+++ b/app/assets/templates/pins/index.jst.ejs
@@ -3,4 +3,7 @@
   <div class='col col2'></div>
   <div class='col col3'></div>
   <div class='col col4'></div>
+  <div class='col col5'></div>
+  <div class='col col6'></div>
+  <div class='col col7'></div>
 </section>
