--- a/app/assets/templates/layout/topbar.jst.ejs
+++ b/app/assets/templates/layout/topbar.jst.ejs
@@ -3,8 +3,8 @@
   <nav id='user_nav'>
     <a href='/#/user/<%= window.current_user.id %>'>Your pins</a>
     <a href='/#/user/<%= window.current_user.id %>/likes'>Your likes</a>
-    <a>Your songs</a>
-    <a>Your bands</a>
+    <a href='/#/user/<%= window.current_user.id %>/followed_songs'>Your songs</a>
+    <a href='/#/user/<%= window.current_user.id %>/followed_bands'>Your bands</a>
     <a href='/#/song/most_popular'>Most popular songs</a>
     <a href='/#/band/most_popular'>Most popular bands</a>
     <a href='/#/all'>All pins</a>
