--- a/app/assets/templates/users/followed_songs.jst.ejs
+++ b/app/assets/templates/users/followed_songs.jst.ejs
@@ -1,10 +1,3 @@
-<h3>Following <%= followed_songs.length %> songs:</h3>
+<h3>Following <%= this.collection.length %> songs:</h3>
 <ul>
-<% _(followed_songs.models).each(function(song){ %>
-  <li>
-    <a href='#/song/<%= song.escape('id') %>'>
-      <%= song.escape('title') %></a>
-       by <%= song.get('band').name %>
-  </li>
-<% }) %>
 </ul>
