adds delete button to FollowedSong view (which now uses SongFollowings collection)

--- a/app/assets/templates/users/followed_songs_detail.jst.ejs
+++ b/app/assets/templates/users/followed_songs_detail.jst.ejs
@@ -1,3 +1,4 @@
-<a href='#/song/<%= followed_song.escape('id') %>'>
-  <%= followed_song.escape('title') %></a>
-   by <%= followed_song.get('band').name %>
+<a href='#/song/<%= song_following.get('song').id %>'>
+  <%= song_following.get('song').title %></a>
+   by <%= song_following.get('song').band.name %>
+   <a class='delete'>Stop following this song</a>
