--- a/app/assets/templates/users/followed_bands_detail.jst.ejs
+++ b/app/assets/templates/users/followed_bands_detail.jst.ejs
@@ -1,3 +1,3 @@
-<a href='#/band/<%= followed_band.escape('id') %>'>
-  <%= followed_band.escape('name') %>
-</a>
+<a href='#/band/<%= band_following.get('band').id %>'>
+  <%= band_following.get('band').name %></a>
+   <a class='delete'>Stop following this band</a>
