--- a/app/assets/templates/users/followed_songs.jst.ejs
+++ b/app/assets/templates/users/followed_songs.jst.ejs
@@ -1,3 +1,4 @@
-<h3>Following <%= this.collection.length %> songs:</h3>
+<% var count = this.collection.length %>
+<h3>Following <%= count %> <%= count > 1 ? 'songs' : 'song' %>:</h3>
 <ul>
 </ul>
