can finally add Facebook pictures (testing and tweaking needed)

--- a/app/assets/templates/pins/new_pin_save_pin.jst.ejs
+++ b/app/assets/templates/pins/new_pin_save_pin.jst.ejs
@@ -1,7 +1,10 @@
 <form id='createPin'>
 <br><br>
 <p>Paste the link of the picture you want to pin to this song.</p>
-<input type='text' name='pin[link]'></input>
+<input type='text' name='pin[link]' id='pin_link'></input>
+<p>Or choose a picture from Facebook (you will be asked to login).</p>
+<a class="fb-lookup">Facebook</a>
+<div class='external_photos'></div>
 <br><br>
 
 <textarea rows="4" cols="50" placeholder='Why does this picture remind you of this song?' name='pin[text]'></textarea>
