--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,7 +79,7 @@ h3 {
   left: 0px;
 }
 
-#user_nav_container > a, .add-pin {
+#user_nav_container > a, .add-pin, .fb-lookup {
   display:block;
   border: 1px solid grey;
   width: 150px;
@@ -423,5 +423,41 @@ select#song {
 .login .error {
   font-weight: bold;
   color: red;
+}
+
+
+.FacebookPhotosView {
+  max-height:245px;
+  overflow:scroll;
+  overflow-y:auto;
+}
+
+.FacebookLookupView h3 {
+  margin-top: 10px;
+}
+
+.photos{
+  height: 200px;
+  width: 10000px;
+}
+
+.fb_photo_div {
+  height: 160px;
+  padding: 5px;
+  float: left;
+  margin: 10px;
+
+  background: white;
+  margin-bottom: 12px;
+  border: 1px solid #D8D7E0;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.20);
+
+}
+
+.fb_photo {
+  height: 150px;
+  width: auto;
+  float: left;
 }
 
