--- a/app/assets/templates/pins/new_pin_save_pin.jst.ejs
+++ b/app/assets/templates/pins/new_pin_save_pin.jst.ejs
@@ -3,7 +3,7 @@
 <p>Paste the link of the picture you want to pin to this song.</p>
 <input type='text' name='pin[link]' id='pin_link'></input>
 <p>Or choose a picture from Facebook (you will be asked to login).</p>
-<a class="fb-lookup">Facebook</a>
+<a class="fb-lookup">Facebook</a> <a class="flickr-lookup">Flickr</a>
 <div class='external_photos'></div>
 <br><br>
 
