--- a/app/assets/templates/pins/new_pin_save_pin.jst.ejs
+++ b/app/assets/templates/pins/new_pin_save_pin.jst.ejs
@@ -8,6 +8,8 @@
 <br><br>
 
 <textarea rows="4" cols="50" placeholder='Why does this picture remind you of this song?' name='pin[text]'></textarea>
+<p>type: blank for photo, 1 for youtube video
+<input type="text" name="pin[pin_type]"></input>
 <br><br>
 <button type="submit">Save</button>
 </form>
