--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,13 +38,33 @@ h3 {
   padding-top: 45px;
 }
 
+
+
+#box_wrap {
+  position:absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: white;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+  cursor: -webkit-zoom-out;
+  cursor: -moz-zoom-out;
+  display: none;
+}
+
 #box {
   position:absolute;
   width: 100%;
   top: 95px;
 }
-
-
 
 /*  TOP BAR  */
 
