--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,9 +52,9 @@ h3 {
 	width: 100%;
 	height: 100%;
 	background-color: white;
-	-moz-opacity: 0.8;
-	opacity:.80;
-	filter: alpha(opacity=80);
+	-moz-opacity: 0.7;
+	opacity:.70;
+	filter: alpha(opacity=70);
   cursor: -webkit-zoom-out;
   cursor: -moz-zoom-out;
   display: none;
@@ -418,6 +418,7 @@ input.log-out-link:hover {
   border-radius: 5px;
   font-family: Verdana,Arial,sans-serif;
   font-size: 17px;
+  position: relative;
 }
 
 select#song {
@@ -437,6 +438,12 @@ select#song {
 .newPin #song_letters {
   width: 150px;
 
+}
+
+.newPin .close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
 }
 
 /*  mimic jQuery UI css  */
