newPin is no longer a route, it's a router method and a topBar event

--- a/app/assets/templates/layout/topbar.jst.ejs
+++ b/app/assets/templates/layout/topbar.jst.ejs
@@ -17,7 +17,7 @@
 
 <a href='#' class='logo'>Music Pins</a>
 
-<a class='add-pin' href='/#/new'>Add a pin</a>
+<a class='add_pin' >Add a pin</a>
 
 
 
