--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,7 +106,7 @@ h3 {
   left: 0px;
 }
 
-#user_nav_container > a, .add-pin {
+#user_nav_container > a, .add_pin {
   display:block;
   border: 1px solid grey;
   width: 150px;
@@ -123,7 +123,7 @@ h3 {
   border-radius: 4px;
 }
 
-.add-pin {
+.add_pin {
   position: absolute;
   top: -2px;
   right: 0px;
