--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ h3 {
   top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: white;
+	background-color: grey;
 	-moz-opacity: 0.7;
 	opacity:.70;
 	filter: alpha(opacity=70);
@@ -121,6 +121,7 @@ h3 {
   margin-top: 12px;
   padding: 6px 14px;
   border-radius: 4px;
+  text-align: center;
 }
 
 .add_pin {
@@ -440,7 +441,7 @@ select#song {
 
 }
 
-.newPin .close {
+.close {
   position: absolute;
   top: 12px;
   right: 12px;
@@ -476,7 +477,7 @@ select#song {
 
 
 .PhotosView {
-  max-height:245px;
+  max-height:220px;
   overflow:scroll;
   overflow-y:auto;
 }
