--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -313,7 +313,7 @@ input.log-out-link:hover {
 .white_overlay {
   position: fixed;
   top: 0;
-/*  left: 0%;*/
+  left: 0%;
 	width: 100%;
 	height: 100%;
 	background-color: white;
@@ -324,7 +324,7 @@ input.log-out-link:hover {
   cursor: -moz-zoom-out;
 }
 
-.focus_container, .most_popular, .followed {
+.focus_container, .box-container {
   position:absolute;
 /*  top: 40px;*/
   top: 95px;
