--- a/app/assets/templates/users/followed_bands.jst.ejs
+++ b/app/assets/templates/users/followed_bands.jst.ejs
@@ -1,5 +1,7 @@
-<% var count = this.collection.length %>
-<h3>Following <%= count %> <%= count > 1 ? 'bands' : 'band' %>:</h3>
-<ul>
-
-</ul>
+<div class='white_overlay'></div>
+<div class='box-container'>
+	<% var count = this.collection.length %>
+	<h3>Following <%= count %> <%= count > 1 ? 'bands' : 'band' %>:</h3>
+	<ul>
+	</ul>
+</div>
