--- a/app/assets/templates/users/followed_songs.jst.ejs
+++ b/app/assets/templates/users/followed_songs.jst.ejs
@@ -1,4 +1,7 @@
-<% var count = this.collection.length %>
-<h3>Following <%= count %> <%= count > 1 ? 'songs' : 'song' %>:</h3>
-<ul>
-</ul>
+<div class='white_overlay'></div>
+<div class='box-container'>
+	<% var count = this.collection.length %>
+	<h3>Following <%= count %> <%= count > 1 ? 'songs' : 'song' %>:</h3>
+	<ul>
+	</ul>
+</div>
