--- a/app/assets/templates/bands/popular.jst.ejs
+++ b/app/assets/templates/bands/popular.jst.ejs
@@ -1,12 +1,15 @@
-<h3>Most popular bands on Music Pins:</h3>
-<ul>
+<div class='white_overlay'></div>
+<div class='box-container'>
+	<h3>Most popular bands on Music Pins:</h3>
+	<ul>
 
-<% _(bands.models).each(function(band){ %>
-  <li>
-    <a href='#/band/<%= band.escape('id') %>'>
-      <%= band.escape('name') %></a>
-       (<%= band.get('pins_count') %>  <%= band.get('pins_count') > 1 ? 'pins' : 'pin' %>)
-  </li>
-<% }) %>
-</ul>
-<button class='close'>X</button>
+	<% _(bands.models).each(function(band){ %>
+	  <li>
+	    <a href='#/band/<%= band.escape('id') %>'>
+	      <%= band.escape('name') %></a>
+	       (<%= band.get('pins_count') %>  <%= band.get('pins_count') > 1 ? 'pins' : 'pin' %>)
+	  </li>
+	<% }) %>
+	</ul>
+	<button class='close'>X</button>
+</div>
