--- a/app/assets/templates/layout/topbar.jst.ejs
+++ b/app/assets/templates/layout/topbar.jst.ejs
@@ -6,9 +6,9 @@
 
     <a id='followed_songs_link'>Your songs</a>
     <a id='followed_bands_link'>Your bands</a>
-<!--
-    <a id='/#/song/most_popular'>Most popular songs</a>
-    <a id='/#/band/most_popular'>Most popular bands</a> -->
+
+    <a id='popular_songs_link'>Popular songs</a>
+    <a id='popular_bands_link'>Popular bands</a>
 
     <a href='/#/all'>All pins</a>
     <form action="/session" class="button_to" method="post">
