removes video pin for now

--- a/app/assets/templates/pins/new_pin_save_pin.jst.ejs
+++ b/app/assets/templates/pins/new_pin_save_pin.jst.ejs
@@ -6,10 +6,8 @@
 <a class="fb-lookup">Facebook</a> <a class="flickr-lookup">Flickr</a> <a class="instagram-lookup">Instagram</a>
 <div class='external_photos'></div>
 <br>
-<p>Or directly paste the link of the picture or video you want to pin to this song.</p>
+<p>Or directly paste the link of the picture you want to pin to this song.</p>
 <input type='text' name='pin[link]' id='pin_link'></input>
-<br>
-<input type="checkbox" name="pin[pin_type]" value="1">This is a YouTube video</input>
 <br><br>
 <textarea rows="4" cols="50" placeholder='Why does this picture remind you of this song?' name='pin[text]'></textarea>
 
