--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -130,6 +130,12 @@ h3 {
   margin: 10px 0;
   border-radius: 3px;
 }
+.link_inserted {
+  margin-left: 5px;
+  font-style:italic;
+  font-weight: bold;
+  color: limegreen;
+}
 
 .add_pin {
   position: absolute;
